[workspace]
resolver = "2"
members = [
    "daemon",
    "cli",
    "core",
    "wallet/macros",
    "wallet/core",
    "wallet/native",
    "wallet/wasm",
    "wallet/bip32",
    "wallet/keys",
    "consensus",
    "consensus/core",
    "consensus/client",
    "consensus/notify",
    "consensus/pow",
    "consensus/wasm",
    "spectred",
    "simpa",
    "wasm",
    "wasm/core",
    "math",
    "crypto/hashes",
    "crypto/muhash",
    "crypto/addresses",
    "crypto/merkle",
    "notify",
    "indexes/core",
    "indexes/processor",
    "indexes/utxoindex",
    "rpc/macros",
    "rpc/core",
    "rpc/service",
    "rpc/grpc/core",
    "rpc/grpc/client",
    "rpc/grpc/server",
    "rpc/wrpc/resolver",
    "rpc/wrpc/server",
    "rpc/wrpc/client",
    "rpc/wrpc/proxy",
    "rpc/wrpc/wasm",
    "rpc/wrpc/examples/subscriber",
    "mining",
    "mining/errors",
    "protocol/p2p",
    "protocol/flows",
    "components/addressmanager",
    "components/connectionmanager",
    "components/consensusmanager",
    "database",
    "crypto/txscript",
    "crypto/txscript/errors",
    "testing/integration",
    "utils",
    "utils/tower",
    "rothschild",
    "metrics/core",
    "metrics/perf_monitor",
    "utils/alloc",
]

[workspace.package]
rust-version = "1.78.0"
version = "0.3.15"
authors = ["Spectre developers"]
license = "ISC"
repository = "https://github.com/spectre-project/rusty-spectre"
edition = "2021"
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "src/**/*.r",
    "proto/**/*.proto",
    "benches/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
]

[workspace.dependencies]
# spectre-testing-integration = { version = "0.3.15", path = "testing/integration" }
spectre-addresses = { version = "0.3.15", path = "crypto/addresses" }
spectre-addressmanager = { version = "0.3.15", path = "components/addressmanager" }
spectre-bip32 = { version = "0.3.15", path = "wallet/bip32" }
spectre-resolver = { version = "0.3.15", path = "rpr/wrpc/resolver" }
spectre-cli = { version = "0.3.15", path = "cli" }
spectre-connectionmanager = { version = "0.3.15", path = "components/connectionmanager" }
spectre-consensus = { version = "0.3.15", path = "consensus" }
spectre-consensus-core = { version = "0.3.15", path = "consensus/core" }
spectre-consensus-client = { version = "0.3.15", path = "consensus/client" }
spectre-consensus-notify = { version = "0.3.15", path = "consensus/notify" }
spectre-consensus-wasm = { version = "0.3.15", path = "consensus/wasm" }
spectre-consensusmanager = { version = "0.3.15", path = "components/consensusmanager" }
spectre-core = { version = "0.3.15", path = "core" }
spectre-daemon = { version = "0.3.15", path = "daemon" }
spectre-database = { version = "0.3.15", path = "database" }
spectre-grpc-client = { version = "0.3.15", path = "rpc/grpc/client" }
spectre-grpc-core = { version = "0.3.15", path = "rpc/grpc/core" }
spectre-grpc-server = { version = "0.3.15", path = "rpc/grpc/server" }
spectre-hashes = { version = "0.3.15", path = "crypto/hashes" }
spectre-index-core = { version = "0.3.15", path = "indexes/core" }
spectre-index-processor = { version = "0.3.15", path = "indexes/processor" }
spectre-math = { version = "0.3.15", path = "math" }
spectre-merkle = { version = "0.3.15", path = "crypto/merkle" }
spectre-metrics-core = { version = "0.3.15", path = "metrics/core" }
spectre-mining = { version = "0.3.15", path = "mining" }
spectre-mining-errors = { version = "0.3.15", path = "mining/errors" }
spectre-muhash = { version = "0.3.15", path = "crypto/muhash" }
spectre-notify = { version = "0.3.15", path = "notify" }
spectre-p2p-flows = { version = "0.3.15", path = "protocol/flows" }
spectre-p2p-lib = { version = "0.3.15", path = "protocol/p2p" }
spectre-perf-monitor = { version = "0.3.15", path = "metrics/perf_monitor" }
spectre-pow = { version = "0.3.15", path = "consensus/pow" }
spectre-rpc-core = { version = "0.3.15", path = "rpc/core" }
spectre-rpc-macros = { version = "0.3.15", path = "rpc/macros" }
spectre-rpc-service = { version = "0.3.15", path = "rpc/service" }
spectre-txscript = { version = "0.3.15", path = "crypto/txscript" }
spectre-txscript-errors = { version = "0.3.15", path = "crypto/txscript/errors" }
spectre-utils = { version = "0.3.15", path = "utils" }
spectre-utils-tower = { version = "0.3.15", path = "utils/tower" }
spectre-utxoindex = { version = "0.3.15", path = "indexes/utxoindex" }
spectre-wallet = { version = "0.3.15", path = "wallet/native" }
spectre-wallet-cli-wasm = { version = "0.3.15", path = "wallet/wasm" }
spectre-wallet-keys = { version = "0.3.15", path = "wallet/keys" }
spectre-wallet-core = { version = "0.3.15", path = "wallet/core" }
spectre-wallet-macros = { version = "0.3.15", path = "wallet/macros" }
spectre-wasm = { version = "0.3.15", path = "wasm" }
spectre-wasm-core = { version = "0.3.15", path = "wasm/core" }
spectre-wrpc-client = { version = "0.3.15", path = "rpc/wrpc/client" }
spectre-wrpc-core = { version = "0.3.15", path = "rpc/wrpc/core" }
spectre-wrpc-proxy = { version = "0.3.15", path = "rpc/wrpc/proxy" }
spectre-wrpc-server = { version = "0.3.15", path = "rpc/wrpc/server" }
spectre-wrpc-wasm = { version = "0.3.15", path = "rpc/wrpc/wasm" }
spectre-wrpc-example-subscriber = { version = "0.3.15", path = "rpc/wrpc/examples/subscriber" }
spectred = { version = "0.3.15", path = "spectred" }
spectre-alloc = { version = "0.3.15", path = "utils/alloc" }

# external
aes = "0.8.3"
ahash = "0.8.11"
arc-swap = "1.6.0"
argon2 = "0.5.2"
async-channel = "2.3.1"
async-std = { version = "1.12.0", features = ['attributes'] }
async-stream = "0.3.5"
async-trait = "0.1.74"
base64 = "0.22.1"
bincode = { version = "1.3.3", default-features = false }
blake2b_simd = "1.0.2"
borsh = { version = "1.5.1", features = ["rc"] } # please keep this fixed
bs58 = { version = "0.5.0", features = ["check"], default-features = false }
cc = "1.0.83"
cfb-mode = "0.8.2"
cfg-if = "1.0.0"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.7", features = ["derive", "string", "cargo"] }
convert_case = "0.6.0"
criterion = { version = "0.5.1", default-features = false }
crossbeam-channel = "0.5.8"
ctrlc = "3.4.1"
crypto_box = { version = "0.9.1", features = ["chacha20"] }
dashmap = "5.5.3"
derivative = "2.2.0"
derive_more = "0.99.17"
dhat = "0.3.2"
dirs = "5.0.1"
downcast = "0.11.0"
downcast-rs = "1.2.0"
duration-string = "0.4.0"
enum-primitive-derive = "0.3.0"
event-listener = "5.3.1"
evpkdf = "0.2.0"
faster-hex = "0.9.0"
fixedstr = { version = "0.5.4", features = ["serde"] }
flate2 = "1.0.28"
futures = { version = "0.3.29" }
futures-util = { version = "0.3.29", default-features = false, features = [
    "alloc",
] }
getrandom = { version = "0.2.15", features = ["js"] }
h2 = "0.4.5"
heapless = "0.8.0"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
hmac = { version = "0.12.1", default-features = false }
home = "0.5.5"
igd-next = { version = "0.14.2", features = ["aio_tokio"] }
indexmap = "2.2.6"
intertrait = "0.2.2"
ipnet = "2.9.0"
itertools = "0.13.0"
js-sys = "0.3.67"
keccak = "0.1.4"
local-ip-address = "0.6.1"
log = "0.4.20"
log4rs = "1.2.0"
malachite-base = "0.4.4"
malachite-nz = "0.4.4"
md-5 = "0.10.6"
num = "0.4.1"
num_cpus = "1.16.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
pad = "0.1.6"
parking_lot = "0.12.1"
paste = "1.0.14"
pbkdf2 = "0.12.2"
portable-atomic = { version = "1.5.1", features = ["float"] }
prost = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rand_distr = "0.4.3"
rayon = "1.8.0"
regex = "1.10.2"
ripemd = { version = "0.1.3", default-features = false }
rlimit = "0.10.1"
rocksdb = "0.22.0"
secp256k1 = { version = "0.29.0", features = [
    "global-context",
    "rand-std",
    "serde",
] }
separator = "0.4.1"
seqlock = "0.2.0"
serde = { version = "1.0.190", features = ["derive", "rc"] }
serde_bytes = "0.11.12"
serde_json = "1.0.107"
serde_repr = "0.1.18"
serde-wasm-bindgen = "0.6.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
slugify-rs = "0.0.3"
smallvec = { version = "1.11.1", features = ["serde"] }
sorted-insert = "0.2.3"
spectrex = ">=0.3.17"
statest = "0.2.2"
statrs = "0.17.1"
subtle = { version = "2.5.0", default-features = false }
tempfile = "3.8.1"
textwrap = "0.16.1"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
toml = "0.8.14"
tonic = { version = "0.11.0", features = ["tls", "gzip", "transport"] }
tonic-build = { version = "0.11.0", features = ["prost"] }
triggered = "0.1.2"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.37"
web-sys = "0.3.67"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zeroize = { version = "1.6.0", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.13"
tower-http = { version = "0.5.2", features = [
    "map-response-body",
    "map-request-body",
] }
tower = "0.4.7"
hyper = "1.3.1"
chrono = "0.4.31"
indexed_db_futures = "0.4.1"
# workflow dependencies that are not a part of core libraries

# workflow-perf-monitor = { path = "../../../workflow-perf-monitor-rs" }
workflow-perf-monitor = "0.0.2"
nw-sys = "0.1.6"

# workflow dependencies
workflow-core = { version = "0.13.3" }
workflow-d3 = { version = "0.13.3" }
workflow-dom = { version = "0.13.3" }
workflow-http = { version = "0.13.3" }
workflow-log = { version = "0.13.3" }
workflow-node = { version = "0.13.3" }
workflow-nw = { version = "0.13.3" }
workflow-rpc = { version = "0.13.3" }
workflow-store = { version = "0.13.3" }
workflow-terminal = { version = "0.13.3" }
workflow-wasm = { version = "0.13.3" }

# if below is enabled, this means that there is an ongoing work
# on the workflow-rs crate. This requires that you clone workflow-rs
# into a sibling folder from https://github.com/workflow-rs/workflow-rs
# workflow-core = { path = "../workflow-rs/core" }
# workflow-d3 = { path = "../workflow-rs/d3" }
# workflow-dom = { path = "../workflow-rs/dom" }
# workflow-http = { path = "../workflow-rs/http" }
# workflow-log = { path = "../workflow-rs/log" }
# workflow-node = { path = "../workflow-rs/node" }
# workflow-nw = { path = "../workflow-rs/nw" }
# workflow-rpc = { path = "../workflow-rs/rpc" }
# workflow-store = { path = "../workflow-rs/store" }
# workflow-terminal = { path = "../workflow-rs/terminal" }
# workflow-wasm = { path = "../workflow-rs/wasm" }

# ---
# workflow-core = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-d3 = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-dom = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-http = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-log = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-node = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-nw = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-rpc = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-store = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-terminal = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# workflow-wasm = { git = "https://github.com/workflow-rs/workflow-rs.git", branch = "master" }
# https://github.com/aspectron/nw-sys
# nw-sys = { path = "../nw-sys" }

[profile.release]
lto = "thin"
strip = true
overflow-checks = true

[profile.heap]
inherits = "release"
debug = true
strip = false

[workspace.lints.clippy]
empty_docs = "allow"