[package]
name = "rothschild"
description = "Spectre Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spectre-addresses.workspace = true
spectre-consensus-core.workspace = true
spectre-core.workspace = true
spectre-grpc-client.workspace = true
spectre-notify.workspace = true
spectre-rpc-core.workspace = true
spectre-txscript.workspace = true
spectre-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true