[package]
name = "simpa"
description = "Spectre Network Simulator"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spectre-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-consensus.workspace = true
spectre-core.workspace = true
spectre-database.workspace = true
spectre-hashes.workspace = true
spectre-perf-monitor.workspace = true
spectre-utils.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
futures-util.workspace = true
futures.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
secp256k1.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[features]
heap = ["dhat", "spectre-alloc/heap"]
semaphore-trace = ["spectre-utils/semaphore-trace"]
