[package]
name = "spectred"
description = "Spectre full node daemon"
keywords = ["spectre", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "spectred_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
spectre-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

spectre-addresses.workspace = true
spectre-addressmanager.workspace = true
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-consensus.workspace = true
spectre-consensusmanager.workspace = true
spectre-core.workspace = true
spectre-database.workspace = true
spectre-grpc-server.workspace = true
spectre-hashes.workspace = true
spectre-index-processor.workspace = true
spectre-mining.workspace = true
spectre-notify.workspace = true
spectre-p2p-flows.workspace = true
spectre-perf-monitor.workspace = true
spectre-rpc-core.workspace = true
spectre-rpc-service.workspace = true
spectre-txscript.workspace = true
spectre-utils.workspace = true
spectre-utils-tower.workspace = true
spectre-utxoindex.workspace = true
spectre-wrpc-server.workspace = true

async-channel.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
serde.workspace = true
dirs.workspace = true
futures-util.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true
toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "spectre-alloc/heap"]
devnet-prealloc = ["spectre-consensus/devnet-prealloc"]
