[package]
name = "spectre-consensusmanager"
description = "Spectre consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
spectre-addresses.workspace=true
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-core.workspace = true
spectre-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
tokio.workspace = true
