[package]
name = "spectre-index-processor"
description = "Spectre index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-consensusmanager.workspace = true
spectre-core.workspace = true
spectre-database.workspace = true
spectre-hashes.workspace = true
spectre-index-core.workspace = true
spectre-notify.workspace = true
spectre-utils.workspace = true
spectre-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
spectre-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}
