[package]
name = "spectre-metrics-core"
description = "Tools for collecting and reporting Spectre p2p node metrics"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
borsh.workspace = true
futures.workspace = true
spectre-core.workspace = true
spectre-rpc-core.workspace = true
separator.workspace = true
serde.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true

[lints]
workspace = true