[package]
name = "spectre-p2p-flows"
description = "Spectre p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spectre-core.workspace = true
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-p2p-lib.workspace = true
spectre-utils.workspace = true
spectre-utils-tower.workspace = true
spectre-hashes.workspace = true
spectre-muhash.workspace = true
spectre-connectionmanager.workspace = true
spectre-addressmanager.workspace = true
spectre-consensusmanager.workspace = true
spectre-mining.workspace = true
spectre-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
