[package]
name = "spectre-rpc-service"
description = "Spectre RPC service"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spectre-addresses.workspace = true
spectre-consensus-core.workspace = true
spectre-consensus-notify.workspace = true
spectre-consensusmanager.workspace = true
spectre-core.workspace = true
spectre-hashes.workspace = true
spectre-index-core.workspace = true
spectre-math.workspace = true
spectre-mining.workspace = true
spectre-notify.workspace = true
spectre-p2p-flows.workspace = true
spectre-p2p-lib.workspace = true
spectre-perf-monitor.workspace = true
spectre-rpc-core.workspace = true
spectre-txscript.workspace = true
spectre-utils.workspace = true
spectre-utils-tower.workspace = true
spectre-utxoindex.workspace = true

async-trait.workspace = true
log.workspace = true
tokio.workspace = true
triggered.workspace = true
workflow-rpc.workspace = true